--- a/Biblio/Biblio.bib
+++ b/Biblio/Biblio.bib
@@ -111,6 +111,19 @@ year = {2018}
 % Fracture --------------------------------------------
 %------------------------------------------------------
 
+@article{Zhang_EE_2020,
+author = {Zhang, Kun and Shen, Shui-Long and Zhou, Annan},
+title = {Dynamic brittle fracture with eigenerosion enhanced material point method},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {n/a},
+number = {n/a},
+pages = {},
+keywords = {brittle fracture, eigenerosion approach, material point method, phantom-node method},
+doi = {10.1002/nme.6381},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nme.6381},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nme.6381}
+}
+
 @article{Wang_2020,
 author = {Wang, Yingnan and Tran, Hieu T. and Nguyen, Giang D. and Ranjith, Pathegama G. and Bui, Ha H.},
 title = {Simulation of mixed-mode fracture using SPH particles with an embedded fracture process zone},
