--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -1,5 +1,4 @@
-% \documentclass[preprint,12pt,a4paper]{elsarticle}
-\documentclass[12pt,a4paper]{elsarticle}
+\documentclass[preprint,12pt,a4paper]{elsarticle}
 \usepackage{lineno}
 \usepackage{hyperref}
 \usepackage{float}
@@ -517,7 +516,7 @@ Figure \ref{fig:Failed-particles}.
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{Figures/Particle-failed}
+  \includegraphics[width=0.5\textwidth]{Figure-Particle-failed}
   \caption{Scheme of a linear cohesive law, where the shaded area is
     $G_f$, $f_t$ is the tensile strength, and $w_c$ is the critical
     opening displacement.}
@@ -556,7 +555,7 @@ and one represents the extension to which the material has failed.
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{Figures/Damage}
+  \includegraphics[width=0.5\textwidth]{Figure-Damage}
   \caption{Scheme of a linear cohesive law, where the shaded area is
     $G_f$, $f_t$ is the tensile strength, and $w_c$ is the critical
     opening displacement.}
@@ -686,7 +685,7 @@ by displacement control on the outer flanks of the plate, Figure
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.4\textwidth]{Figures/Mode_I}
+  \includegraphics[width=0.4\textwidth]{Figure-Mode_I}
   \caption{Geometry and boundary condition of the drop-weight impact test.}
   \label{fig:geometry-cracked-panel-mode-I}
 \end{figure}
@@ -707,7 +706,7 @@ over. They are due to the dynamic nature of the simulation.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/Reactions_displacements_square_panel_mode_I}
+  \includegraphics[width=0.8\textwidth]{Figure-Reactions-mode-I}
   \caption{Evolution of the reaction forces plotted \textit{versus}
     the imposed displacement for linear interpolation technique and
     the \acrshort{lme} approximants.}
@@ -716,9 +715,9 @@ over. They are due to the dynamic nature of the simulation.
 
 \begin{figure}
 \centering
-\subfigure[t1]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0100.png}}
-\subfigure[t2]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0250.png}}
-\subfigure[t3]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0398.png}}
+\subfigure[t1]{\includegraphics[width=0.7\textwidth]{./Figure-Stress-0100-mode-I.png}}
+\subfigure[t2]{\includegraphics[width=0.7\textwidth]{./Figure-Stress-0250-mode-I.png}}
+\subfigure[t3]{\includegraphics[width=0.7\textwidth]{./Figure-Stress-0398-mode-I.png}}
 \caption{Evolution of the stress tensor magnitude for linear
   interpolation (pictures in the left side), and \acrshort{lme}
   (pictures in the right side). Both simulations performed with an
@@ -733,7 +732,7 @@ over. They are due to the dynamic nature of the simulation.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/Drop_weight}
+  \includegraphics[width=0.8\textwidth]{./Figure-Drop-weight}
   \caption{Geometry and boundary condition of the drop-weight impact test.}
   \label{fig:geometry-drop-weight-impact-test}
 \end{figure}
@@ -860,6 +859,6 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
 \end{algorithm}
 
 % name your BibTeX data base
-\bibliography{Biblio/Biblio} 
+\bibliography{Biblio} 
 
 \end{document}
