--- a/_region_.tex
+++ b/_region_.tex
@@ -1,9 +1,9 @@
-\message{ !name(2020_EFM_MPM_Eigensoftening.tex)}% \documentclass[preprint,12pt,a4paper]{elsarticle}
-\documentclass[12pt,a4paper]{elsarticle}
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex)}\documentclass[preprint,12pt,a4paper]{elsarticle}
 \usepackage{lineno}
 \usepackage{hyperref}
 \usepackage{float}
-\usepackage{subfig}
+\usepackage{graphicx} % figuras
+% \usepackage{subfig}
 \usepackage{subfigure} % subfiguras
 \usepackage{color}
 \usepackage{soul}
@@ -519,7 +519,7 @@ Figure \ref{fig:Failed-particles}.
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{Figures/Particle-failed}
+  \includegraphics[width=0.5\textwidth]{Particle-failed}
   \caption{Scheme of a linear cohesive law, where the shaded area is
     $G_f$, $f_t$ is the tensile strength, and $w_c$ is the critical
     opening displacement.}
@@ -558,7 +558,7 @@ and one represents the extension to which the material has failed.
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{Figures/Damage}
+  \includegraphics[width=0.5\textwidth]{Damage}
   \caption{Scheme of a linear cohesive law, where the shaded area is
     $G_f$, $f_t$ is the tensile strength, and $w_c$ is the critical
     opening displacement.}
@@ -688,7 +688,7 @@ by displacement control on the outer flanks of the plate, Figure
 %%%%%%%%%%%
 \begin{figure}
   \centering
-  \includegraphics[width=0.4\textwidth]{Figures/Mode_I}
+  \includegraphics[width=0.4\textwidth]{Mode_I}
   \caption{Geometry and boundary condition of the drop-weight impact test.}
   \label{fig:geometry-cracked-panel-mode-I}
 \end{figure}
@@ -709,7 +709,7 @@ over. They are due to the dynamic nature of the simulation.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/Reactions_displacements_square_panel_mode_I}
+  \includegraphics[width=0.8\textwidth]{Reactions_displacements_square_panel_mode_I}
   \caption{Evolution of the reaction forces plotted \textit{versus}
     the imposed displacement for linear interpolation technique and
     the \acrshort{lme} approximants.}
@@ -718,15 +718,16 @@ over. They are due to the dynamic nature of the simulation.
 
 \begin{figure}
 \centering
-\subfigure[t1]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0100.png}}
-\subfigure[t2]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0250.png}}
-\subfigure[t3]{\includegraphics[width=0.7\textwidth]{./Figures/Edge_cracked_square_panel_in_mode_I_Stress_0398.png}}
-\caption{Legos.}
+\subfigure[t1]{\includegraphics[width=0.7\textwidth]{./Edge_cracked_square_panel_in_mode_I_Stress_0100.png}}
+\subfigure[t2]{\includegraphics[width=0.7\textwidth]{./Edge_cracked_square_panel_in_mode_I_Stress_0250.png}}
+\subfigure[t3]{\includegraphics[width=0.7\textwidth]{./Edge_cracked_square_panel_in_mode_I_Stress_0398.png}}
+\caption{Evolution of the stress tensor magnitude for linear
+  interpolation (pictures in the left side), and \acrshort{lme}
+  (pictures in the right side). Both simulations performed with an
+  eigenerosion algorithm.}
 \label{fig:Stress-cracked-panel-mode-I}
 \end{figure}
 
-Edge_cracked_square_panel_in_mode_I_Stress_0250.png
-Edge_cracked_square_panel_in_mode_I_Stress_0398.png
 
 \subsection{Drop-weight impact test}
 \label{sec:3.3}
@@ -734,7 +735,7 @@ Edge_cracked_square_panel_in_mode_I_Stress_0398.png
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/Drop_weight}
+  \includegraphics[width=0.8\textwidth]{./Drop_weight}
   \caption{Geometry and boundary condition of the drop-weight impact test.}
   \label{fig:geometry-drop-weight-impact-test}
 \end{figure}
@@ -861,7 +862,7 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
 \end{algorithm}
 
 % name your BibTeX data base
-\bibliography{Biblio/Biblio} 
+\bibliography{Biblio} 
 
 \end{document}
-\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-867) }
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-868) }
