--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -926,15 +926,15 @@ Based on the EigenMPM approach to fracture proposed by Zhang {\it et al.}
 solves the shortcomings presented in the original concept. First by
 bring to the \acrshort{mpm} framework the concept of eigensoftening,
 which allow to consider gradual failure process of each material
-point. This concept can be compared with cohesive law in the context
+point. This concept can be compared with a cohesive law in the context
 of cohesive fracture. Furthermore, more elaborated damage curves can
-be designed to describe the failure process in sophisticated
+be designed to describe the failure process in more sophisticated
 materials. In this direction, an interesting future improvement of the
 algorithm would be the ability to simulate of crack patterns in
 composite material such carbon fiber. This leads a challenging
 research topic. Secondly, \acrshort{lme} is employed to remove from
 the solution those wiggles due to inaccuracies in the stress
-integration. This interpolation technique could help to improve the
+integration. This interpolation technique could help to improve
 results in fracture propagation by adapting it thorough the
 deformation gradient. \textit{A priori} this will enhance the already
 impressive localisation properties of eigensoftening and eigenerosion
