--- a/Biblio.bib
+++ b/Biblio.bib
@@ -79,6 +79,17 @@ year = {1996}
 }
 
 
+
+@article{Molinos2020,
+author = {Molinos, M. and Navas, P. and Pastor, M. and Mart\'in Stickle, M.},
+journal = cmame,
+pages = {--},
+title = {{On the dynamic assessment of the Local-Maximum Entropy Material Point Method through an Explicit Predictor-Corrector Scheme}},
+volume = {Under review},
+year = {2020}
+}
+
+
 @article{York1999,
 author = {York, Allen R. and Sulsky, D. L. and Schreyer, H.L.},
 doi = {10.1002/(SICI)1097-0207(19990410)44:10<1429::AID-NME536>3.0.CO;2-4},
